fixed error in day shifting, moved more code out of event card

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -14,7 +14,7 @@
 </center>
 
 <div class="col-md-10 col-md-offset-1">
-  <%= active_events(@active_events) %>
+  <%= active_events(@active_events, @view_is_today) %>
 </div>
 
 <div class="col-md-10 col-md-offset-1">
