--- a/app/views/shared/_date_block.html.erb
+++ b/app/views/shared/_date_block.html.erb
@@ -1,6 +1,6 @@
 <% compact ||= false %>
 
-<h4 class="short-hd pull-right <%= 'hidden-sm hidden-xs' if compact %>">
+<h4 class="short-hd pull-right <%= 'hidden-xs' if compact %>">
   <small>
     <%= event.pretty_time_range %>
   </small>
