--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,14 +10,15 @@
       </button>
     </div>
 
-    <%= link_to root_url, class: "navbar-brand hidden-xs hidden-sm" do %> <!-- took out waves effect for now -->
+    <%= link_to root_url, class: "navbar-brand hidden-xs" do %>
       <%= image_tag "logoSample.png" %>
     <% end %>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
-        <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link waves-effect visible-xs visible-sm" %></li>
+        <li class="nav-item"><%= link_to "Home", root_path, class: "nav-link waves-effect visible-xs" %></li>
       </ul>
+
       <% if user_signed_in? && current_user.owner? %>
         <ul class="nav navbar-nav navbar-left">
           <li class="nav-item"><%= link_to "New Event", new_event_path, class: "nav-link waves-effect" %></li>
@@ -26,6 +27,7 @@
           <li class="nav-item"><%= link_to "My Profile", user_show_path(current_user.id), class: "nav-link waves-effect" %></li>
         </ul>
       <% end %>
+
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li ="nav-item"><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
