--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,10 +1,13 @@
 .card {
   padding: 15px;
   background-color: white;
+  border: 2px solid #D3D3D3 !important;
 }
 
 .card:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: none !important;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   position: relative;
 }
 
@@ -45,12 +48,11 @@ p {
 }
 
 body {
-  padding-top: 70px;
   background-color: #F1F1F1;
 }
 
 .bod {
-  padding-top: 80px;
+
 }
 
 html {
@@ -141,4 +143,14 @@ textarea {
   left: 50%;
   position: absolute;
   margin-top: -15px;
+}
+
+#mast-head {
+  height: 200px;
+  margin-bottom: 40px;
+}
+
+#mast-logo {
+  height: 100%;
+  background-color: black;
 }
