--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,19 +14,18 @@
   </head>
 
   <body class="bod">
-
-    <%= render 'shared/navbar' %>
-      <%= render 'shared/devise_flash_override' %>
-      <% flash.each do |key, value| %>
-        <% unless key == "notice" || key == "alert" %>
-          <div class="alert alert-<%= key %>"><%= value %></div>
-        <% end %>
+    <%= render 'shared/mast_head' %>
+    <%= render 'shared/devise_flash_override' %>
+    <% flash.each do |key, value| %>
+      <% unless key == "notice" || key == "alert" %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
+    <% end %>
 
 
-      <div <%= "class=container".html_safe unless controller_name == "events" && action_name == "index" %>>
-        <%= yield %>
-      </div>
+    <div <%= "class=container".html_safe unless controller_name == "events" && action_name == "index" %>>
+      <%= yield %>
+    </div>
 
   </body>
 
