--- a/app/views/shared/_mast_head.html.erb
+++ b/app/views/shared/_mast_head.html.erb
@@ -1,6 +1,6 @@
 <div id="mast-head" class="col-lg-12">
 
   <div id="mast-logo" class="col-lg-2 col-lg-offset-5">
-    <%= image_tag "logoSample.png" %>
+    <%= image_tag "BoredInSbLogoSample.png" %>
   </div>
 </div>
