--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,2 @@
 <br>
-<%= render 'shared/event_card', event: @event, edit_mode: @edit_mode, show: true, location: true %>
+<%= render 'shared/event_card_wrapper', event: @event, edit_mode: @edit_mode, show: true, location: true %>
