--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
         <%= day_link_list %>
       </div>
     </div>
-    <%= link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless @view_is_today %>
+    <%# link_to "reset", events_path, class: "btn btn-sm btn-secondary" unless @view_is_today %>
   </h3>
 </center>
 
