--- a/app/views/shared/_mast_head.html.erb
+++ b/app/views/shared/_mast_head.html.erb
@@ -1,6 +1,9 @@
 <div id="mast-head" class="col-lg-12">
-
   <div id="mast-logo" class="col-lg-4 col-lg-offset-4">
-  <center>  <%= image_tag "LogoLines.png" %>  </center>
+  <center>
+    <%= link_to root_path do %>
+      <%= image_tag "LogoLines.png" %>
+    <% end %>
+  </center>
   </div>
 </div>
