--- a/app/views/shared/_event_card_wrapper.html.erb
+++ b/app/views/shared/_event_card_wrapper.html.erb
@@ -1,6 +1,6 @@
 <% event ||= nil %>
 <% edit_mode ||= false %>
-<% show ||= nil %>
+<% show_owner ||= nil %>
 <% location ||= false %>
 <% hide_desc ||= false %>
 <% show_rel_time ||= false %>
@@ -11,7 +11,7 @@
 <% card_params = {
   event: event,
   edit_mode: edit_mode,
-  show: show,
+  show_owner: show_owner,
   location: location,
   hide_desc: hide_desc,
   show_rel_time: show_rel_time,
