--- a/app/views/shared/_date_line.html.erb
+++ b/app/views/shared/_date_line.html.erb
@@ -1,3 +1,10 @@
-<div class="visible-xs visible-sm event-days <%= today_or_tomorrow_class(event) %>">
-  <%= event.pretty_active_time %> <%= event.pretty_time_range %>
-</div>
+<h4 class="short-hd visible-xs visible-sm">
+  <small class="hidden-xs hidden-sm">
+    <%= event.pretty_time_range %>
+  </small>
+  <% if date %>
+    <div class="event-days <%= today_or_tomorrow_class(event) %>">
+      <%= event.pretty_active_time %>
+    </div>
+  <% end %>
+</h4>
