--- a/app/views/shared/_event_card.html.erb
+++ b/app/views/shared/_event_card.html.erb
@@ -1,22 +1,27 @@
 <%= content_tag(:div, class: "card #{'event-card' if link_to_path } #{'no-top-bord' if index && index != 0}") do %>
   <h4>
     <!-- Title -->
-    <%= "#{event.name}#{ " @ #{event.owner.name}" if show_owner }"  %>
+    <%= "#{event.name}#{ " @ #{event.owner.name}" if show_owner }" %>
   </h4>
 
   <!-- Time/Date -->
-  <%= render 'shared/date_block', event: event %><!-- !sm/xs -->
-  <%= render 'shared/date_line', event: event %><!-- sm/xs -->
+  <%= render 'shared/date_block', event: event, date: date %><!-- !sm/xs -->
+  <%= render 'shared/date_line', event: event, date: date %><!-- sm/xs -->
 
   <!-- Relative Time -->
   <% if show_rel_time %>
-    <div class="<%= "hidden-xs" if compact %>">
-      <h4><small><%= event.time_relative_to_now %></small></h4>
+    <div>
+      <h4>
+        <small>
+          <i class="glyphicon glyphicon-time time-icon"></i>
+          <%= event.time_relative_to_now %>
+        </small>
+      </h4>
     </div>
   <% end %>
 
   <!-- Body -->
-  <div class="<%= "hidden-xs" if compact %>">
+  <div class="<%= "hidden-xs" if hide_desc %>">
     <p><%= event.description %></p>
     <p><%= owner_links(event) if edit_mode %></p>
   </div>
