--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,9 @@
 <br>
-<%= render 'shared/event_card_wrapper', event: @event, edit_mode: @edit_mode, show_owner: true, location: true %>
+<%= render 'shared/event_card_wrapper',
+  event: @event,
+  edit_mode: @edit_mode,
+  show_owner: true,
+  location: true,
+  show_rel_time: true,
+  combined_time_line: true
+%>
