--- a/app/views/shared/_owner_list.html.erb
+++ b/app/views/shared/_owner_list.html.erb
@@ -4,7 +4,7 @@
   </div>
   <ul>
     <% owners.each do |user| %>
-      <li><%= link_to user.name, user_show_path(user) %><li/>
+      <li><%= link_to user.name, user_path(user) %><li/>
     <% end %>
   </ul>
 </div>
