--- a/app/views/shared/_date_block.html.erb
+++ b/app/views/shared/_date_block.html.erb
@@ -1,8 +1,3 @@
-<h4 class="pull-right hidden-xs hidden-sm">
+<h4 class="pull-right hidden-md hidden-sm hidden-xs">
   <%= event.pretty_time_range %>
-  <% if date %>
-    <div class="event-days <%= today_or_tomorrow_class(event) %>">
-      <%= event.pretty_active_time %>
-    </div>
-  <% end %>
 </h4>
