--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,9 +5,9 @@
 </ul>
 
 <ul>
-  <li><%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-  <% end -%></li>
+  <!-- <li><%# if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%# link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%# end -%></li> -->
 
   <li><%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
     <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
