--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <li><%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name) %><br />
+    <%= link_to "login", new_session_path(resource_name) %><br />
   <% end -%></li>
 </ul>
 
@@ -10,7 +10,7 @@
   <%# end -%></li> -->
 
   <li><%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+    <%= link_to "reset password", new_password_path(resource_name) %><br />
   <% end -%></li>
 </ul>
 
