--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <%= link_to root_url, class: "navbar-brand hidden-xs" do %>
-      <%= image_tag "LogoLines.png" %>
+      <%= image_tag "shindig.png" %>
     <% end %>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
