--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body class="bod">
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/mast_head' %>
     <div id="content" class="col-lg-12">
       <%= render 'shared/devise_flash_override' %>
       <% flash.each do |key, value| %>
